[package]
name = "aoc20223"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01-part-01"
path = "day-01/part-01.rs"

[[bin]]
name = "day-01-part-02"
path = "day-01/part-02.rs"

[[bin]]
name = "day-02-part-01"
path = "day-02/part-01.rs"

[[bin]]
name = "day-02-part-02"
path = "day-02/part-02.rs"

[[bin]]
name = "day-03-part-01"
path = "day-03/part-01.rs"

[[bin]]
name = "day-03-part-02"
path = "day-03/part-02.rs"

[[bin]]
name = "day-05-part-01"
path = "day-05/part-01.rs"

[[bin]]
name = "day-05-part-02"
path = "day-05/part-02.rs"

[[bin]]
name = "day-06-part-01"
path = "day-06/part-01.rs"

[[bin]]
name = "day-06-part-02"
path = "day-06/part-02.rs"

[[bin]]
name = "day-07-part-01"
path = "day-07/part-01.rs"

[[bin]]
name = "day-07-part-02"
path = "day-07/part-02.rs"

[[bin]]
name = "day-08-part-01"
path = "day-08/part-01.rs"

[[bin]]
name = "day-08-part-02"
path = "day-08/part-02.rs"

[dependencies]
regex = "1.10.2"
itertools = "0.12.0"
rayon = "1.8.0"
num = "0.4.1"